[gd_scene load_steps=10 format=3 uid="uid://c11xx74a6nshp"]

[ext_resource type="Script" path="res://scripts/Main_level_script.gd" id="1_e5oxr"]
[ext_resource type="PackedScene" uid="uid://c2h5wi5d0wwxc" path="res://prefabs/player/Player.tscn" id="2_83fl6"]
[ext_resource type="Texture2D" uid="uid://b6pxv22bf1sx4" path="res://textures/512X512.png" id="2_t1ju2"]
[ext_resource type="PackedScene" path="res://WEAPONS/weapon.tscn" id="3_l4mva"]
[ext_resource type="PackedScene" path="res://prefabs/death_zone.tscn" id="5_34waj"]
[ext_resource type="PackedScene" path="res://prefabs/ammo_create.tscn" id="6_hhs8r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i2e8i"]
albedo_texture = ExtResource("2_t1ju2")
uv1_scale = Vector3(0.2, 0.2, 0.2)
uv1_triplanar = true

[sub_resource type="LabelSettings" id="LabelSettings_13522"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_a4i52"]
font_size = 64

[node name="Node3D" type="Node3D"]
script = ExtResource("1_e5oxr")
startAmmo = 5

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.75, -0.43301, 0, 8.72539, 0)
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="." groups=["shootable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.7519, 0, 0)
use_collision = true
collision_layer = 6
collision_mask = 6
size = Vector3(136.504, 0.115, 55)
material = SubResource("StandardMaterial3D_i2e8i")

[node name="Player" parent="." instance=ExtResource("2_83fl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="weapon" parent="." instance=ExtResource("3_l4mva")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.80221, 0.0575008, 4.6292)

[node name="CSGBox3D6" type="CSGBox3D" parent="." groups=["shootable"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37115e-08, -14.2885, 7.63559, 1.49451)
use_collision = true
collision_layer = 6
collision_mask = 6
size = Vector3(20, 15.2562, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="." groups=["shootable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.84579, 7.66651, 12.018)
use_collision = true
collision_layer = 6
collision_mask = 6
size = Vector3(20, 15.2562, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="." groups=["shootable"]]
transform = Transform3D(1, 0, 0, 0, 0.773498, -0.6338, 0, 0.6338, 0.773498, 0, 19.9316, 5.73489)
use_collision = true
collision_layer = 6
collision_mask = 6
size = Vector3(3.82837, 3.09546, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="." groups=["shootable"]]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, -1)
use_collision = true
collision_layer = 6
collision_mask = 6
size = Vector3(3.82837, 3.09546, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="." groups=["shootable"]]
transform = Transform3D(1, 0, 0, 0, 0.699776, -0.714363, 0, 0.714363, 0.699776, 0, 2.09771, 6.1888)
use_collision = true
collision_layer = 6
collision_mask = 6
size = Vector3(3.82837, 3.09546, 1)

[node name="Death_Zone" parent="." instance=ExtResource("5_34waj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -71, 0)

[node name="Label2" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -218.0
offset_top = -186.0
offset_right = -6.0
offset_bottom = -98.0
grow_horizontal = 0
grow_vertical = 0
text = "Bullets"
label_settings = SubResource("LabelSettings_13522")

[node name="AmmoLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -88.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_a4i52")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Speed
"
label_settings = SubResource("LabelSettings_13522")

[node name="SpeedLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = 89.0
offset_right = 41.0
offset_bottom = 112.0
label_settings = SubResource("LabelSettings_a4i52")

[node name="AmmoCreate" parent="." instance=ExtResource("6_hhs8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.931564, 0.0574996, -12.4489)

[connection signal="set_ammo" from="." to="Player" method="_on_node_3d_set_ammo"]
[connection signal="player_shot_fired" from="Player" to="." method="_on_player_player_shot_fired"]
[connection signal="body_entered" from="Death_Zone" to="." method="_on_death_zone_body_entered"]
[connection signal="change_ammo" from="AmmoCreate" to="." method="_on_ammo_create_change_ammo"]
